--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "gulp",
     "build": "gulp build"
   },
-  "author": "sasha kazakevich",
+  "author": "reen",
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
@@ -15,6 +15,5 @@
     "gulp-connect": "^4.0.0",
     "gulp-less": "^4.0.1",
     "gulp-util": "^3.0.7"
-  },
-  "dependencies": {}
+  }
 }
